[package]
name = "sortbigfile"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = { version = "0.4.22", features = ["std"] }
env_logger = "0.11.3"
rand = "0.8.4"
rand_distr = "0.4.3"